--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.13.2",
-    "browser-sync": "^2.14.0",
+    "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^1.1.2",
     "clean-webpack-plugin": "^0.1.10",
     "copy-webpack-plugin": "^3.0.1",
@@ -30,16 +30,16 @@
     "font-awesome": "^4.5.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
-    "less": "^3.0.1",
+    "jquery": "^3.1.1",
+    "jquery.scrollto": "^2.1.2",
+    "less": "^3.0.4",
     "less-loader": "^4.0.5",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.13.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
     "waypoints": "^4.0.0",
-    "jquery": "^3.1.1",
-    "jquery.scrollto": "^2.1.2"
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
